# hackaton-usina

./: .gitignore  README.md  imports.py  requirements.txt
data-historia/: README.md  pyproject.toml  query.py  requirements.txt  run.py  usina_tandil_qa.py
data-historia/notebook/: test_multimodal.ipynb
data-organigrama/: pyproject.toml  query.ipynb  queryProcessor.py  query_processor.py  usina.db
data-tramites/: README.md  create.py  pyproject.toml  query.ipynb  query.py  requirements.txt  tramite.py
data-tramites/tramites_db/: chroma.sqlite3
front-end/: index.html  package-lock.json  package.json  vite.config.js
front-end/src/: App.css  App.jsx  index.css
front-end/src/components/: Recorder copy.jsx  Recorder.css  Recorder.jsx  Response.jsx  mic.jsx
front-end/src/hooks/: old_useLongPress.jsx  useLongPress.jsx  useMediaRecorder.jsx
front-end/src/mock-data/: response.json
historia/: __init__.py  main.py  run.py
historia/output/: dicts_images_text.pickle  log.txt
organigrama/: README.md  __init__.py  query.py  query_processor.py  run.py  usina.sql
organigrama/documents/: PERSONAL Y UBICACION EN EL EDIFICIO (USICOM + USINA).xls
router/: Procfile  README.md  helpers.py  main.py  pyproject.toml  requirements.txt  s3_audio_response_handler.py  speech_processor.py  usina_semantic_router.py
tramites/: __init__.py  query.py  run.py  tramite.py
