[project]
name = "data-historia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fitz>=0.0.1.dev2",
    "ipython>=9.0.2",
    "langchain-chroma>=0.2.2",
    "langchain-core>=0.3.44",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langchain-text-splitters>=0.3.6",
    "open-clip-torch>=2.31.0",
    "pandas>=2.2.3",
    "pymupdf>=1.25.3",
    "pytesseract>=0.3.13",
    "shapely>=2.0.7",
    "streamlit>=1.43.2",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
